--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,13 @@ body {
   width: 22px;
 }
 
+.cell.blank {
+  color: #0b0;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 54px;
+}
+
 .cell.gray {
   background-color: transparent;
 }
@@ -64,6 +71,21 @@ body {
   border: none;
   font-size: 24px;
   text-align: center;
+}
+
+.cell input.add {
+  font-size: 32px;
+}
+
+.cell input.subtract {
+  font-size: 38px;
+  height: 45px;
+  padding-bottom: 5px;
+}
+
+.cell input.divide {
+  font-size: 26px;
+  font-weight: bold;
 }
 
 .equals > .cell {
